--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                   class="btn btn-primary w-100"
                                   type="submit"
                                 >
-                                  Send Message
+                                  Book
                                 </button>
                               </div>
                             </div>
