--- a/on-going-projects.html
+++ b/on-going-projects.html
@@ -124,8 +124,8 @@
                                                     </div>
 
                                                     <div class="col-12">
-                                                        <button class="btn btn-primary w-100" type="submit">Send
-                                                            Message</button>
+                                                        <button class="btn btn-primary w-100" type="submit">Book
+                                                            </button>
                                                     </div>
                                                 </div>
                                             </form>
