--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -123,7 +123,7 @@
                                                         </div>
                                                         
                                                         <div class="col-12">
-                                                            <button class="btn btn-primary w-100" type="submit">Send Message</button>
+                                                            <button class="btn btn-primary w-100" type="submit">Book</button>
                                                         </div>
                                                     </div>
                                                 </form>
